git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "8722759"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "8722759"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/variables.pod
+++ b/perl6/doc/lib/Language/variables.pod
@@ -619,7 +619,7 @@ Other compile-time variables:
 =comment There should be a better way get this table to be formatted
     properly, but if there is, Rakudo doesn't support it at the moment.
 
-X<current working directoy>
+X<current working directory>
 X<$*CWD|variable.$*CWD>
 
 =for table
