--- a/perl6/doc/lib/Type/Channel.pod
+++ b/perl6/doc/lib/Type/Channel.pod
@@ -86,4 +86,13 @@ Closes the channel (that is, makes subsequent C<send> calls die), and enqueues
 the error as the final element in the channel. Method C<receive> will throw
 the error as an exception.
 
+=head2 sub await
+
+    multi sub await(Channel:D)
+    multi sub await(*@)
+
+Waits until all of one or more channels has a value available, and returns
+those values (it calls C<.receive> on the channel). Also works with
+L<promises|/type/Promise>.
+
 =end pod
