--- a/perl6/doc/lib/Type/Promise.pod
+++ b/perl6/doc/lib/Type/Promise.pod
@@ -211,4 +211,12 @@ exception of type C<X::Promise::Vowed>.
     $vow.keep;
     say $p.status;          # Kept
 
+=head2 sub await
+
+    multi sub await(Promise:D)
+    multi sub await(*@)
+
+Waits until one or more promises are all fulfilled, and then returns their
+values. Also works on L<channels|/type/Channel>.
+
 =end pod
