--- a/perl6/doc/lib/Language/modules.pod
+++ b/perl6/doc/lib/Language/modules.pod
@@ -13,15 +13,16 @@ directory|http://modules.perl6.org>. C<:)>
 For now, the process requires that you use git for your module's version
 control.
 
-The instructions herein require that you have a github account so that
-your module can be shared from its github repository.
+The instructions herein require that you have a
+L<GitHub|http://www.github.com> account so that your module can be shared
+from its GitHub repository.
 
-To share your module then, do the following:
+To share your module, do the following:
 
     =item Create a project directory named after your module. For
-    example, if your module is Vortex::TotalPerspective, then create a
+    example, if your module is C<Vortex::TotalPerspective>, then create a
     project directory named C<Vortex-TotalPerspective>. This project
-    directory name will also be used as the github repo name.
+    directory name will also be used as the GitHub repo name.
 
     =begin item
     Make your project directory look like this:
@@ -47,8 +48,8 @@ To share your module then, do the following:
                 `-- Gargravarr.pm
     =end item
 
-    =item The C<README.md> file is a markdown-formatted text file, which
-    will later be automatically rendered as html by github.
+    =item The C<README.md> file is a L<markdown-formatted|https://help.github.com/articles/markdown-basics/> text file, which
+    will later be automatically rendered as HTML by GitHub.
 
     =item Regarding the C<LICENSE> file, if you have no other preference,
     you might just use the same one that Rakudo Perl 6 uses. Just
@@ -58,22 +59,22 @@ To share your module then, do the following:
     =item If you don't yet have any tests, you can leave out the C<t>
     directory and C<basic.t> file for now. For more info on how to write
     tests (for now), you might have a look at how other modules use
-    Test. It's quite similar to Perl 5's Test::More.
+    C<Test>. It's quite similar to Perl 5's C<Test::More>.
 
     =item To document your modules, use L<Perl 6 Pod |
     http://design.perl6.org/S26.html> markup inside your modules. Module
-    documentation is most appreciated, and will be especially important once
+    documentation is most appreciated and will be especially important once
     the Perl 6 module directory (or some other site) begins rendering Pod docs
-    as html for easy browsing.
+    as HTML for easy browsing.
     N«
         Note, described above is a minimal project directory. If your project
         contains scripts that you'd like distributed along with your module(s),
-        put them in a bin directory. If you have extra docs (in addition to the
-        Pod docs in your module(s)), create a doc directory for them. If you'd
+        put them in a C<bin> directory. If you have extra docs (in addition to the
+        Pod docs in your module(s)), create a C<doc> directory for them. If you'd
         like a graphical logo to appear next to your module at the module
-        directory, create a logotype directory and put into it a C<logo_32x32.png>
-        file. At some point, you might also consider adding CONTRIBUTORS, NEWS,
-        TODO, or other files.
+        directory, create a C<logotype> directory and put into it a C<logo_32x32.png>
+        file. At some point, you might also consider adding C<CONTRIBUTORS>, C<NEWS>,
+        C<TODO>, or other files.
     »
 
     =begin item
@@ -99,13 +100,13 @@ To share your module then, do the following:
     =item Put your project under git version control if you haven't done so
     already.
 
-    =item Once you're happy with your project, create a repo for it at github.
-    See L<github's help docs|https://help.github.com/> if necessary. Your
-    github repo should be named the same as your project directory. Immediately
-    after creating the github repo, github shows you how to configure your
-    local repo to know about your github repo.
+    =item Once you're happy with your project, create a repo for it at GitHub.
+    See L<GitHub's help docs|https://help.github.com/> if necessary. Your
+    GitHub repo should be named the same as your project directory. Immediately
+    after creating the GitHub repo, GitHub shows you how to configure your
+    local repo to know about your GitHub repo.
 
-    =item Push your project to github.
+    =item Push your project to GitHub.
 
     =item Ping someone on IRC (#perl6 at freenode) to either show you how to
     add your module to the L<ecosystem|https://github.com/perl6/ecosystem>, or
@@ -121,7 +122,7 @@ installer tool which is included with Rakudo Star Perl 6:
 This will download your module to its own working directory (C<~/.panda>),
 build it there, and install the module into C<~/.perl6>.
 
-To use Vortex::TotalPerspective from your scripts, just write
+To use C<Vortex::TotalPerspective> from your scripts, just write
 C<use Vortex::TotalPerspective>, and your Perl 6 implementation will
 know where to look for the module file(s).
 
