git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "f00a14e"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "f00a14e"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/grammars.pod
+++ b/perl6/doc/lib/Language/grammars.pod
@@ -166,7 +166,7 @@ the supplied string.
 
 =head3 method parsefile
 
-    method parsefile(Cool $filename as Str, *%opts) returns Match:D
+    method parsefile(Str(Cool) $filename, *%opts) returns Match:D
 
 Parses the contents of the file C<$filename> with the L<parse> method,
 passing any named options in C<%opts>.
