--- a/perl6/doc/lib/Language/mop.pod
+++ b/perl6/doc/lib/Language/mop.pod
@@ -140,4 +140,20 @@ has a primitive, class-like kind called C<knowhow>, which is used to
 bootstrap its own classes and roles implementation. C<knowhow> is built on
 primitives that the virtual machine under NQP provides.
 
+=head2 Composition time and static reasoning
+
+In Perl 6, a type is constructed as it is parsed, so in the beginning, it must
+be mutable. However if all types were always mutable, all reasoning about them
+would get invalidated at any modification of a type. For example the list of
+parent types and thus the result of type checking can change during that time.
+
+So to get the best of
+both worlds, there is a time when a type transitions from mutable to
+immutable. This is called I<composition>, and for syntactically declared
+types, it happens when the type declaration is fully parsed (so usually when
+the closing curly brace is parsed).
+
+If you create types through the meta-object system directly, you must call
+C<.^compose> on them before they become fully functional.
+
 =end pod
