--- a/perl6/doc/lib/Type/IO/Handle.pod
+++ b/perl6/doc/lib/Type/IO/Handle.pod
@@ -45,7 +45,7 @@ Return a lazy list of the file's lines read via L<get>, limited to C<$limit> lin
 
 =head2 method read
 
-    method read(IO::Handle:D: Cool:D $bytes as Int --> Buf)
+    method read(IO::Handle:D: Int(Cool:D) $bytes --> Blob)
 
 Binary reading; reads and returns C<$bytes> bytes from the handle
 
