--- a/perl6/doc/lib/Type/Cool.pod
+++ b/perl6/doc/lib/Type/Cool.pod
@@ -308,6 +308,29 @@ C<$unit>. If C<$unit> is 1, rounds to the nearest integer.
     say 1.07.round(0.1);    # 1.1
     say 21.round(10);       # 20
 
+=head2 method floor
+
+    multi method floor
+
+Coerces the invocant to L<Numeric|/type/Numeric>, and rounds it downwards to
+the nearest integer.
+
+    say "1.99".floor;       # 1
+    say "-1.9".floor;       # -2
+    say 0.floor;            # 0
+
+=head2 method ceiling
+
+    multi method ceiling
+
+Coerces the invocant to L<Numeric|/type/Numeric>, and rounds it upwards to
+the nearest integer.
+
+    say "1".ceiling;        # 1
+    say "-0.9".ceiling;     # 0
+    say "42.1".ceiling;     # 43
+
+
 =head2 method ord
 
     method ord()
@@ -361,14 +384,44 @@ Coerces the invocant to L<Str|/type/Str>, and returns a reversed version.
 
     say 421.flip;       # 124
 
+=head2 method trim
+
+    method trim()
+
+Coerces the invocant to L<Str|/type/Str>, and returns the string with both
+leading and trailing whitespace stripped.
+
+    my $stripped = '  abc '.trim;
+    say "<$stripped>";          # <abc>
+
+=head2 method trim-leading
+
+    method trim(-leading)
+
+Coerces the invocant to L<Str|/type/Str>, and returns the string with
+leading whitespace stripped.
+
+    my $stripped = '  abc '.trim-leading;
+    say "<$stripped>";          # <abc >
+
+=head2 method trim-trailing
+
+    method trim-trailing()
+
+Coerces the invocant to L<Str|/type/Str>, and returns the string with both
+leading and trailing whitespace stripped.
+
+    my $stripped = '  abc '.trim-trailing;
+    say "<$stripped>";          # <  abc>
+
 
 =begin comment
 
 TODO: sech, asech, cosech, acosech, cotanh, acotanh, cis, roots, log10,
-unpolar, floor, ceiling, truncate, fmt, substr, substr-rw, uc, lc, tc,
-tclc, wordcase, chomp, chop, chrs, filp, trans, index, rindex, ords,
+unpolar, truncate, fmt, substr, substr-rw, uc, lc, tc,
+tclc, wordcase, chomp, chop, chrs, trans, index, rindex, ords,
 split, match, comb, lines, words, subst, sprintf, printf, samecase, path,
-trim, trim-leading, trim-trailing, EVAL
+EVAL
 
 =end comment
 
