git subrepo clone --force git://github.com/MARTIMM/mongo-perl6-driver.git MARTIMM/mongo-perl6-driver
subrepo:
  subdir:   "MARTIMM/mongo-perl6-driver"
  merged:   "fe4b19b"
upstream:
  origin:   "git://github.com/MARTIMM/mongo-perl6-driver.git"
  branch:   "master"
  commit:   "fe4b19b"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/MARTIMM/mongo-perl6-driver/lib/MongoDB/Connection.pod
+++ b/MARTIMM/mongo-perl6-driver/lib/MongoDB/Connection.pod
@@ -40,8 +40,8 @@ my MongoDB::Database $database = $connection.database('test');
 
 =head1 DESCRIPTION
 
-This module helps the client to connect to the server and provides some
-maintenance commands. The module is loaded automatically with the MongoDB
+This class helps the client to connect to the server and provides some
+maintenance commands. The class is loaded automatically with the MongoDB
 module.
 
 =head1 METHODS
