--- a/MARTIMM/mongo-perl6-driver/lib/MongoDB/Collection.pod
+++ b/MARTIMM/mongo-perl6-driver/lib/MongoDB/Collection.pod
@@ -65,9 +65,65 @@ $collection.remove( );
 
 =head1 DESCRIPTION
 
-This set of modules will help you accessing a MongoDB server. All primitive
-functions are installed to insert, update, find and remove documents.
-http://docs.mongodb.org/meta-driver/latest/legacy/mongodb-wire-protocol/
+Classes to help accessing and manipulating MongoDB collections. The class is
+loaded automatically with the MongoDB
+module.
+
+=head1 CLASSES
+
+=for head2
+class X::MongoDB::Collection is Exception {...}
+
+Some methods from the C<MongoDB::Collection> class will throw exceptions when
+things go wrong. E.g. deleting a non existent index will hickup.
+
+=begin nested
+=begin code
+
+if $cmd ~~ 'delete' {
+  $doc = $collection.drop_index( %( non_existent_index => 1));
+
+  CATCH {
+    when X::MongoDB::Collection {
+      say "Drop index error: $_";
+    }
+  }
+}
+
+=end code
+=end nested
+
+Instead of catching the thrown exception you can also try the call to see if
+it works or not.
+
+=begin nested
+=begin code
+
+if $cmd ~~ 'delete' {
+  try $doc = $collection.drop_index( %( code1 => 1));
+  if $! {
+    say "Drop index error: $!";
+}
+
+=end code
+=end nested
+
+
+=for head2
+class MongoDB::Collection does MongoDB::Protocol {...}
+
+The class of which the methods are explaned below. The class has the following
+attributes;
+
+=for head3
+has $.database;
+
+If attribute is defined it holds the current MongoDB::Database object.
+
+=for head3
+has Str $.name;
+
+If attribute is defined it holds the name of the collection.
 
 =head1 METHODS
 
@@ -122,9 +178,26 @@ $cursor.fetch( ).perl.say;
 =end nested
 
 =for head2
-method find_one ( %criteria = { }, %projection = { } --> Hash ) {
+method find_one ( %criteria = { }, %projection = { } --> Hash ) {...}
 
 Same as for find() except it will only return one document.
+
+=for head2
+method explain ( %criteria = { } --> Hash ) {...}
+
+Return information on the query plan using the criteria. There are many fields
+in the document. The fields returned also depend on the type of queries. Look
+for this information on the L<MongoDB site|http://docs.mongodb.org/manual/reference/method/cursor.explain>.
+
+=for head2
+method count ( %criteria = { }, --> Int ) {...}
+
+Count documents using search criteria without using find and a cursor..
+
+=for head2
+method distinct ( $field-name!, %criteria = { }, --> Array ) {...}
+
+Find distinct values of a field depending on criteria.
 
 =begin head2 
 method update ( %selector, %update,
@@ -172,6 +245,60 @@ $collection.remove( :single_remove, {nick => 'pb'});
 $collection.remove();
 =end code
 =end nested
+
+=for head2
+method ensure_index ( %key-spec, %options = {} --> Nil ) {...}
+
+Create a new index on the current collection. The %key-spec document specify
+which indexes must be created and how. The %options is a document on how to
+process the insertion. Depending on the type of index, %options can have
+different keys.
+
+See also information on the MongoDB site about L<general|http://docs.mongodb.org/manual/reference/method/db.collection.ensureIndex/>,
+L<text|http://docs.mongodb.org/manual/core/index-text/>, L<2dsphere|http://docs.mongodb.org/manual/core/2dsphere/>,
+L<ed|http://docs.mongodb.org/manual/core/2d/> and L<geoHaystack|http://docs.mongodb.org/manual/core/geohaystack/>
+indexes.
+
+This method will throw a X::MongoDB::Collection exception on failures.
+
+=for head2
+method drop_index ( $key-spec --> Hash ) {...}
+
+Drop an index. The %key-spec specifies the keys to be dropped. It has the
+same format as in ensure_index. When the %options<name> key is used when setting
+an index, the name itself can be used to drop the index. Lastly, when the text
+is '*', all indexes except for _id will be deleted. This is what drop_indexes()
+will do for you.
+
+=begin nested
+=begin code
+
+$collection.ensure_index( %( code1 => 1), %( name => 'testindex'));
+$doc = $collection.drop_index('testindex');
+
+=end code
+=end nested
+
+This method will throw a X::MongoDB::Collection exception on failures.
+
+=for head2
+method drop_indexes ( --> Hash ) {...}
+
+Drop all indexes for the collection except _id.
+
+=for head2
+method drop ( --> Hash ) {...}
+
+Drop the current collection from the database.
+
+This method will throw a X::MongoDB::Collection exception on failures.
+
+=for head2
+method get_indexes ( --> MongoDB::Cursor ) {...}
+
+Get a cursor with which to retrieve documents with index information in
+the current collection. There is always one document of the _id_ index.
+
 
 =end pod
 
