git subrepo clone --force git://github.com/perl6/doc.git perl6/doc
subrepo:
  subdir:   "perl6/doc"
  merged:   "6f6938b"
upstream:
  origin:   "git://github.com/perl6/doc.git"
  branch:   "master"
  commit:   "6f6938b"
git-subrepo:
  version:  "0.2.0"
  origin:   "git@github.com:ingydotnet/git-subrepo.git"
  commit:   "5c38bbc"

--- a/perl6/doc/lib/Language/mop.pod
+++ b/perl6/doc/lib/Language/mop.pod
@@ -156,4 +156,23 @@ the closing curly brace is parsed).
 If you create types through the meta-object system directly, you must call
 C<.^compose> on them before they become fully functional.
 
+Most meta classes also use composition time to calculate some properties like
+the method resolution order, publish a method cache, and other house-keeping
+tasks. Meddling with types after they have been composed is sometimes
+possible, but usually a recipe for disaster. Don't do it.
+
+=head2 Power and Responsibility
+
+The meta object protocol offers much power that regular Perl 6 code
+intentionally limits, such as calling private methods on classes that don't
+trust you, peeking into private attributes, and other things that usually
+simply aren't done.
+
+Regular Perl 6 code has many safety checks in place; not so the meta model. It
+is close to the underlying virtual machine, and violating the contracts with
+the VM can lead to all sorts of strange behaviors that, in normal code, would
+obviously be bugs.
+
+So be extra careful and thoughtful when writing meta types.
+
 =end pod
