--- a/perl6/doc/lib/Language/terms.pod
+++ b/perl6/doc/lib/Language/terms.pod
@@ -17,7 +17,7 @@ Here you can find an overview of different kinds of terms.
     12_300_00
     :16<DEAD_BEEF>
 
-L<Int> literals consist of digits, and can contain underscores
+L<Int> literals consist of digits and can contain underscores
 between any two digits.
 
 To specify a base other than ten, use the colonpair form C<< :radix<number> >>.
@@ -27,7 +27,7 @@ To specify a base other than ten, use the colonpair form C<< :radix<number> >>.
     12.34
     1_200.345_678
 
-L<Rat> (rational numbers) literals contain two integer parts joined by a dot.
+L<Rat> literals (rational numbers) contain two integer parts joined by a dot.
 
 Note that trailing dots are not allowed, so you have to write C<1.0> instead
 of C<1.> (this rule is important because there are infix operators starting
@@ -38,9 +38,9 @@ with a dot, for example the C<..> L<Range> operator).
     12.3e-32
     3e8
 
-L<Num> (floating point numbers) literals consist of L<Rat> or L<Int> literals
-followed by an C<e> and a (possibly negative) exponent. C<3e8> constructs a
-L<Num> with value C<3 * 10**8>.
+L<Num> literals (floating point numbers) consist of L<Rat> or L<Int>
+literals followed by an C<e> and a (possibly negative) exponent. C<3e8>
+constructs a L<Num> with value C<3 * 10**8>.
 
 =head2 Str
 
@@ -50,9 +50,8 @@ L<Num> with value C<3 * 10**8>.
     "\"But I still can be,\" he said."
     q|Other delimters can be used too!|
 
-String literals are most often created with C<'> or C<">, but strings
-are actually a powerful sub-language of Perl 6. See
-L<Quoting Constructs>.
+String literals are most often created with C<'> or C<">, however strings
+are actually a powerful sub-language of Perl 6. See L<Quoting Constructs>.
 
 =head2 Regex
 
@@ -79,17 +78,17 @@ These forms produce regex literals. See L<Quoting Constructs>.
 
 L<Pair> objects can be created either with C<< infix:«=>» >> (which
 auto-quotes the left-hand side if it is an identifier), or with the various
-colonpair forms. Those always start with a colon, and then are followed either
-by an identifier or the name of an already existing variable (whose name sans
-the sigil is used as the key, and value of the variable is used as the value
-of the pair).
+colon-pair forms. Those always start with a colon and then are followed
+either by an identifier or the name of an already existing variable (whose
+name without the sigil is used as the key and value of the variable is used
+as the value of the pair).
 
-In the identifier form a colonpair, the optional value can be any circumfix.
-If it is left blank, the value is C<Bool::True>. The value of the
-C<:!identifier> form is C<Bool::False>.
+In the identifier form of a colon-pair, the optional value can be any
+circumfix.  If it is left blank, the value is C<Bool::True>. The value of
+the C<:!identifier> form is C<Bool::False>.
 
-If used in an argument list, all of these forms count as named arguments, with
-the exception of C<< 'quoted string' => $value >>.
+If used in an argument list, all of these forms count as named arguments,
+with the exception of C<< 'quoted string' => $value >>.
 
 =head2 Parcel
 
@@ -100,21 +99,22 @@ the exception of C<< 'quoted string' => $value >>.
     qw/a b c/
 
 L<Parcel> literals are: the empty pair of parens C<()>, a comma-separated
-list, or several quoting constructs
+list, or several quoting constructs.
 
 =head2 term *
 
-Creates an object of type C<Whatever>. See L<Whatever> documentation for more details.
+Creates an object of type C<Whatever>. See L<Whatever> documentation for
+more details.
 
 =head1 Identifier terms
 
-There are built-in identifier terms in Perl 6, which are listed below.
-In addition one can add new identifier terms with the syntax
+There are built-in identifier terms in Perl 6, which are listed below.  In
+addition one can add new identifier terms with the syntax:
 
     sub term:<fourty-two> { 42 };
     say fourty-two
 
-or as constants
+or as constants:
 
     constant forty-two = 42;
     say fourty-two
@@ -129,18 +129,22 @@ compile-time exception of type L<X::Syntax::NoSelf> is thrown.
 
 Returns an L<Instant> object representing the current time.
 
+=head2 term time
+
+Returns an L<Int> representing the current time.
+
 =head2 term rand
 
 Returns a pseudo-random L<Num> in the range C<0..^1>.
 
 =head2 term pi
 
-Returns the number C<pi>, i.e. the ratio between circumference and diameter of
-a circle.
+Returns the number C<pi>, i.e. the ratio between circumference and diameter
+of a circle.
 
 =head2 term e
 
-Returns Euler's number
+Returns Euler's number.
 
 =head2 term i
 
@@ -148,6 +152,6 @@ Returns the imaginary unit (for L<Complex> numbers).
 
 =head1 Variables
 
-Variables are discussed in L<variable language docs |/language/variables>.
+Variables are discussed in the L<variable language docs |/language/variables>.
 
 =end pod
