--- a/perl6/doc/lib/Type/Metamodel/MultipleInheritance.pod
+++ b/perl6/doc/lib/Type/Metamodel/MultipleInheritance.pod
@@ -30,6 +30,10 @@ so that L<mro_unhidden|/type/Metamodel::C3MRO#method mro_unhidden> skips it.
 Adds C<$parent> as a parent type. If C<$hides> is set to a true value, the
 parent type is added as a hidden parent.
 
+C<$parent> must be a fully L<composed|/language/mop#Composition time and
+static reasoning> typed. Otherwise an exception of type
+L<X::Inheritance::NotComposed> is thrown.
+
 =head2 method parents
 
     method parents(Metamodel::MultipleInheritance:D: $obj, :$all, :$tree)
