--- a/perl6/doc/lib/Type/Supply.pod
+++ b/perl6/doc/lib/Type/Supply.pod
@@ -268,6 +268,12 @@ Use C<migrate> to join the values into a single Supply again.
 
 Produces a continuous supply from a supply of supplies.
 
+=head2 method delayed
+
+    method delayed(Supply:D: $delay) returns Supply:D
+
+Returns a supply thats delayed by C<$delay> seconds.
+
 =head2 method from-list
 
     method from-list(Supply:U: *@elems) returns Supply:D
