--- a/perl6/doc/lib/Language/operators.pod
+++ b/perl6/doc/lib/Language/operators.pod
@@ -729,9 +729,13 @@ if C<$a eqv $b>, then C<$a cmp $b> always returns C<Order::Same>.
     multi sub infix:<leg>(Any,   Any)
     multi sub infix:<leg>(Str:D, Str:D)
 
-String three-way comparator.
+String three-way comparator. Short for I<less, equal or greater?>.
 
 Coerces both arguments to L<Str>, and then does a lexicographic comparison.
+
+    say 'a' leg 'b';        Less
+    say 'a' leg 'a';        Same
+    say 'b' leg 'a';        More
 
 =head2 infix C«<=>»
 
@@ -932,6 +936,11 @@ Returns C<True> if the first argument is larger than the second.
 Equivalence operator. Returns C<True> if the two arguments are structurally
 the same, i.e. from the same type and (recursively) contain the same values.
 
+    say [1, 2, 3] eqv [1, 2, 3];        # True
+    say Any eqv Any;                    # True
+    say 1 eqv 2;                        # False
+    say 1 eqv 1.0;                      # False
+
 =head2 infix C«===»
 
     proto sub infix:<===>(Any, Any) returns Bool:D is assoc<chain>
@@ -958,11 +967,21 @@ types must override method C<WHICH>.
 
 =head2 infix C«=:=»
 
-    proto sub infix:<=:=>(Mu $a is rw, Mu $b is rw) returns Bool:D is assoc<chain>
-    multi sub infix:<=:=>(Mu $a is rw, Mu $b is rw)
+    proto sub infix:<=:=>(Mu \a, Mu \b) returns Bool:D is assoc<chain>
+    multi sub infix:<=:=>(Mu \a, Mu \b)
 
 Container identity. Returns L<True> if both arguments are bound to the same
-container.
+container. If it returns C<True>, it generally means that modifying one will
+also modify the other.
+
+    my ($a, $b) = (1, 3);
+    say $a =:= $b;      # False
+    $b = 2;
+    say $a;             # 1
+    $b := $a;
+    say $a =:= $b;      # True
+    $a = 5;
+    say $b;             # 5
 
 =head2 infix C«~~»
 
