--- a/perl6/doc/lib/Language/quoting.pod
+++ b/perl6/doc/lib/Language/quoting.pod
@@ -140,11 +140,75 @@ It's easier to write and to read this:
 
     my @directions = <left right up down>;
 
-=head2 X<Shell quoting: qqw|quote,qqw;quote,« »>
+=head2 X<Word quoting with interpolation: qqw|quote,qqw;quote,« »>
 
-TODO
+The C<qw> form of word quoting doesn't interpolate variables:
 
-=comment also document qqx<>
+    my $a = 42; say qw{$a b c};  # $a b c
+
+Thus, if you wish for variables to be interpolated within the quoted string,
+you need to use the C<qqw> variant:
+
+    my $a = 42;
+    my @list = qqw{$a b c};
+    say @list;                # 42 b c
+
+or equivalently:
+
+    my $a = 42;
+    my @list = «$a b c»;
+    say @list;                # 42 b c
+
+=head2 X<Shell quoting: qx|quote,qx>
+
+To run a string as an external program, not only is it possible to pass the
+string to the C<shell> or C<run> functions but one can also perform shell
+quoting in a similar manner to the backticks a.k.a. C<qx> in Perl 5.  There
+are some subtleties to consider, however.  The backticks are no longer used
+for shell quoting in Perl 6 and the C<qx> quotes I<don't> interpolate Perl
+variables.  Thus
+
+    my $world = "there";
+    say qx{echo "hello $world"}
+
+prints simply C<hello>.  Nevertheless, if you have declared an environment
+variable before calling C<perl6>, this will be available within C<qx>, for
+instance
+
+    WORLD="there" perl6
+    > say qx{echo "hello $WORLD"}
+
+will now print C<hello there>.
+
+The result of calling C<qx> is returned, so this information can be assigned
+to a variable for later use:
+
+    my $output = qx{echo "hello!"};
+    say $output;    # hello!
+
+See also L<shell|/routine/shell>, L<run|/routine/run> and L<Proc::Async> for
+other ways to execute external commands.
+
+=head2 X<Shell quoting with interpolation: qqx|quote,qqx>
+
+If one wishes to use the content of a Perl variable within an external
+command, then the C<qqx> shell quoting construct should be used (this
+corresponds to Perl 5's C<qx>):
+
+    my $world = "there";
+    say qqx{echo "hello $world"};  # hello there
+
+Again, the output of the external command can be kept in a variable:
+
+    my $word = "cool";
+    my $option = "-i";
+    my $file = "/usr/share/dict/words";
+    my $output = qqx{grep $option $word $file};
+    # runs the command: grep -i cool /usr/share/dict/words
+    say $output;      # Cooley␤Cooley's␤Coolidge␤Coolidge's␤cool␤ ...
+
+See also L<shell|/routine/shell> and L<run|/routine/run> for other ways to
+execute external commands.
 
 =head2 Heredocs: :to
 
@@ -152,7 +216,7 @@ TODO
 
 =head1 Regexes
 
-TODO -- or just point to regexes.pod?
-
+For information about quoting as applied in regexes see the L<regular
+expression documentation|/language/regexes>.
 
 =end pod
