--- a/perl6/doc/lib/Type/IO.pod
+++ b/perl6/doc/lib/Type/IO.pod
@@ -11,6 +11,96 @@ particular object relates to input/output.
 
 =head1 Routines
 
+=head2 sub print
+
+Print the given text on C<$*OUT> (standard output), e.g.:
+
+    print "Hi there!\n";   # Hi there!
+
+Note that the C<print> function does I<not> (in contrast to some other
+languages) append a newline character to the text.  Thus the following code
+
+    print "Hi there!";
+    print "How are you?";
+
+displays
+
+    Hi there!How are you?
+
+To print text implicitly including the trailing newline character, use
+L<say|type/IO#sub say>.
+
+=head2 sub say
+
+Print the given text, followed by a newline C<"\n"> on C<$*OUT> (standard
+output).
+
+With C<say>, the example code as mentioned in the C<print> section will be
+displayed as the user likely intended:
+
+    say "Hi there!";
+    say "How are you?";
+
+displays
+
+    Hi there!
+    How are you?
+
+C<say> prints non-C<Str> objects by calling their C<.gist> method before
+printing.  Hence the following C<say> statements for the respective
+containers are equivalent:
+
+=begin code
+    my @array = qw{1 2 3 4};
+    say @array;       # 1 2 3 4␤
+    say @array.gist;  # 1 2 3 4␤
+
+    my %hash = "a" => 1, "b" => 2, "c" => 3;
+    say %hash;        # a => 1, b => 2, c => 3␤
+    say %hash.gist;   # a => 1, b => 2, c => 3␤
+=end code
+
+=head2 sub note
+
+Print the given text, followed by a newline C<"\n"> on C<$*ERR> (standard
+error).  Before printing, call the C<.gist> method on any non-C<Str>
+objects.
+
+C<note> is effectively C<say>, only it writes its output to the standard
+error stream.  For instance:
+
+=begin code
+    if ("path/to/pirate/treasure".IO.e) {
+	say "Found pirate treasure!";
+    }
+    else {
+	note "Could not find pirate treasure.  Are you sure it exists?";
+    }
+=end code
+
+will report (on the standard output stream) that treasure has been found if
+it exists or will note on the error stream that it couldn't be found if it
+doesn't exist.
+
+=head2 sub dd
+
+The Tiny Data Dumper.  This function takes the input list of variables and
+C<note>s them (on C<$*ERR>) in an easy to read format, along with the
+C<name> of the variable.  Thus,
+
+    my $a = 42;
+    my %hash = "a" => 1, "b" => 2, "c" => 3;
+    dd %hash, $a;
+
+prints
+
+    %hash = ("a" => 1, "c" => 3, "b" => 2).hash, $a = 42
+
+to the standard error stream.
+
+This is in spirit similar to Perl 5's L<Data::Dumper
+module|http://perldoc.perl.org/Data/Dumper.html>.
+
 =head2 sub prompt
 
     sub prompt($msg)
@@ -20,6 +110,132 @@ for the user to type in something and finish with an ENTER.
 Returns the string typed in without the trailing newline.
 
     my $name = prompt("Hi, what's your name? ");
+
+=head2 sub open
+
+    my $fh = open($path as IO, *%opts);
+
+Opens the C<$path> as an C<IO> object (by default in text mode) with the
+given options, returning an L<IO::Handle> object.
+
+=head3 File mode options
+
+=item read-only mode, C<:r>
+
+Open the file as read only, e.g.:
+
+    my $fh = open("path/to/file", :r);
+
+This is the default mode for C<open>.
+
+Write-related methods on the returned C<IO::Handle> object will fail in this
+mode:
+
+    my $fh = open("test");   # the file "test" already exists
+    spurt $fh, "new text\n";
+    Failed to write bytes to filehandle: bad file descriptor
+
+=item write-only mode, C<:w>
+
+Open the file for writing, creating it if it doesn't exist or overwriting
+the file if it does exist, e.g.:
+
+    my $fh = open("path/to/file", :w);
+
+Read-related methods will fail in this mode:
+
+    my $fh = open("test", :w);
+    spurt $fh, "stuff\n";
+    spurt $fh, "more stuff\n";
+    $fh.seek(0, 0);   # return to the start of the file
+    $fh.get();        # Reading from filehandle failed: bad file descriptor
+
+=item read-write mode, C<:rw>
+
+Open the file for reading and writing, creating the file if it doesn't
+exist or overwriting the file if it already exists.
+
+    my $fh = open("path/to/file", :w);
+
+=item append mode, C<:a>
+
+Open the file for appending.  If the file does not exist, create it.  If the
+file already exists, append data to it.
+
+    my $fh = open("path/to/file", :a);
+
+=head3 Encoding options
+
+=item binary mode, C<:bin>
+
+Open the file in binary mode (byte mode):
+
+    my $fh = open("path/to/file", :bin);
+
+A file opened with C<:bin> may still be processed line-by-line, but IO will
+be in terms of L<Buf|/type/Buf> rather than L<Str|/type/Str> types.  Default
+is C<False>, implying text semantics.
+
+=item text mode encoding, C<:enc>
+
+Encoding to use if opened in text mode.
+
+    # open explicitly as utf8
+    my $fh = open("path/to/file", enc => "utf8");
+    my $fh = open("path/to/file", enc => "utf-8");  # this form also works
+    # open with latin1 encoding
+    my $fh = open("path/to/file", enc => "latin1");
+
+Defaults to "Unicode", which implies figuring out which actual UTF is in
+use, either from a BOM or other heuristics.  If heuristics are inconclusive,
+UTF-8 will be assumed.  (No 8-bit encoding will ever be picked implicitly.)
+There exists no valid option with the name "Unicode", so the following will
+result in an error:
+
+    my $fh = open("path/to/file", enc => "Unicode");
+
+This is because one needs to specify a specific unicode encoding, e.g.
+"utf8".
+
+=head3 Newline options
+
+=item end-of-line (EOL) marker, C<:nl>
+
+The marker used to indicate the end of a line of text.  Only used in text
+mode.  Defaults to "EOL", which implies accepting any combination of C<"\n">,
+C<"\r\n"> or C<"\r"> or any other Unicode character that has the C<Zl>
+(Separator, Line) property.
+
+    # explicitly use CR-LF as EOL character
+    my $fh = open("path/to/file", nl => "\r\n");
+
+=item chomp mode, C<:chomp>
+
+Whether or not to remove newline characters from text obtained with
+C<.lines> and C<.get>.  Defaults to C<True>.
+
+    # don't remove newline characters from input
+    my $fh = open("path/to/file", chomp => False);
+    say $fh.get();     # returns line including newline char
+
+=head2 method close
+
+To close an open file handle, simply call its
+L<close|/type/IO::Handle#method close> method:
+
+    my $fh = open("path/to/file");
+    # ... do stuff with the file
+    $fh.close;
+
+It is also possible to call this as a sub, thus the example above can be
+written equivalently like so:
+
+    my $fh = open("path/to/file");
+    # ... do stuff with the file
+    close $fh;
+
+When a file was opened for writing, closing it is important to ensure that all
+contents are actually written to the file.
 
 =head2 sub dir
 
@@ -48,6 +264,79 @@ To include all the entries (including . and ..) write:
 To include only entries with a .pl extension write:
 
     dir(test => /.pl$/)
+
+=head2 sub slurp
+
+Slurps the contents of the entire file into a C<Str> (or C<Buf> if C<:bin>).
+Accepts C<:bin> and C<:enc> optional named parameters, with the same meaning
+as L</open()>.  The routine will C<fail> if the file does not exist, or is a
+directory.
+
+    # read entire file as (Unicode) Str
+    my $text_contents   = slurp "path/to/file";
+
+    # read entire file as Latin1 Str
+    my $text_contents   = slurp "path/to/file", enc => "latin1";
+
+    # read entire file as Buf
+    my $binary_contents = slurp "path/to/file", :bin;
+
+=head2 sub spurt
+
+    sub spurt ($where, $what,
+        Str  :$enc        = $*ENC,
+        Bool :append      = False,
+        Bool :$createonly = False,
+        --> Bool ) is export
+
+Writes the indicated contents (2nd positional parameter, C<$what>) to the
+location indicated by the first positional parameter, C<$where> (which can
+either be a string, an C<IO::Path> object, or an already opened
+C<IO::Handle> object).
+
+If a file needs to be opened for writing, it will also be C<close>d.  Returns
+True on success, or the appropriate C<Failure> if something went wrong.
+
+These named parameters are optional and only have meaning if the first
+positional parameter was B<not> an C<IO::Handle>:
+
+=head3 Options
+
+=item :enc
+
+The encoding with which the contents will be written.
+
+=item :append
+
+Boolean indicating whether to append to a (potentially) existing file.  If
+the file did not exist yet, it will be created.  Defaults to C<False>.
+
+=item :createonly
+
+Boolean indicating whether to fail if the file already exists.  Defaults to
+C<False>.
+
+=head3 Examples
+
+    # write directly to a file
+    spurt "path/to/file", "default text, directly written";
+
+    # write to an IO::Handle
+    my $fh = "path/to/file", :w;
+    spurt $fh, "default text, written via IO::Handle";
+    $fh.close;
+
+    # write directly with a non-Unicode encoding
+    spurt "path/to/latin1_file", "latin1 text: äöüß", enc => "latin1";
+
+    # append to a pre-existing file
+    spurt "file_already_exists", "some text";
+    spurt "file_already_exists", "new text", :append;
+    slurp "file_already_exists";   # some text␤new text
+
+    # fail when writing to a pre-existing file
+    spurt "file_already_exists", "new text", :createonly;
+    File 'test' already exists, and :createonly was specified
 
 =head2 sub mkdir
 
