--- a/perl6/doc/lib/Type/Real.pod
+++ b/perl6/doc/lib/Type/Real.pod
@@ -59,11 +59,21 @@ Rounds the number towards zero.
 
 =head2 method base
 
-    method base(Real:D: Int:D $base where 2..36) returns Str:D
+    method base(Real:D: Int:D $base where 2..36, $digits?) returns Str:D
 
 Converts the number to a string, using C<$base> as base. For C<$base> larger
 than ten, capital Latin letters are used.
 
-    255.base(16)    # 'FF'
+    255.base(16)            # 'FF'
+
+The optional C<$digits> argument asks for that many digits of fraction
+(which may not be negative).  If omitted, a reasonable default is chosen
+based on type.  For Int this default is 0.  For L<Num|/type/Num>, the default is 8.
+For L<Rational|/type/Rational>, the number of places is scaled to the size of the denominator,
+with a minimum of 6.
+
+The final digit produced is always rounded.
+
+    say pi.base(10, 5);     # 3.14159
 
 =end pod
