--- a/MARTIMM/mongo-perl6-driver/lib/MongoDB/Collection.pod
+++ b/MARTIMM/mongo-perl6-driver/lib/MongoDB/Collection.pod
@@ -199,6 +199,26 @@ method distinct ( $field-name!, %criteria = { }, --> Array ) {...}
 
 Find distinct values of a field depending on criteria.
 
+=for head2
+method group ( Str $js_reduce_func, Str :$key = '',
+               :%initial = {}, Str :$key_js_func = '',
+               :%condition = {}, Str :$finalize = ''
+               --> Hash ) {...}
+
+Groups documents in a collection by the specified keys and performs simple
+aggregation functions. See also L<this
+page|http://docs.mongodb.org/manual/reference/method/db.collection.group/>.
+
+=for head2
+method map_reduce ( Str $map_js_func, Str $reduce_js_func, Hash :$out,
+                    Str :$finalize, Hash :$criteria, Hash :$sort,
+                    Hash :$scope, Int :$limit, Bool :$jsMode = False
+                    --> Hash ) {...}
+
+The mapReduce command allows you to run map-reduce aggregation operations over
+a collection. See also L<this
+page|http://docs.mongodb.org/manual/reference/command/mapReduce/>.
+
 =begin head2 
 method update ( %selector, %update,
                 Bool :$upsert = False, Bool :$multi_update = False
